--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
 
         <h4>Another change to check</h4>
         <p>mama dekho to hoi kina,na hle kosto pabo bt hal charbo na</p>
+        <hr>
+        <p>onek valo korci..</p>
+        <p>r o time dite hbe</p>
     </body>
 </html>
